# end-to-end-machine-learning-project-with-mlflow

./: main.py  pyproject.toml  schema.yaml  template.py
artifacts/data_transformation/: test.csv  train.csv
artifacts/data_validation/: status.txt
artifacts/model_trainer/: model.joblib
research/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  04_model_training.ipynb  05_model_evaluation.ipynb
src/mlproject/: __init__.py
src/mlproject/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_training.py
src/mlproject/config/: configuration.py
src/mlproject/entity/: config_entity.py
src/mlproject/pipeline/: stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_training.py
src/mlproject/utils/: common.py
